--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3", 
+    "@nestjs/platform-fastify": "^10.3.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -68,8 +71,5 @@
       "@sjfrhafe/nest-problem-details/(.*)": "<rootDir>/src/$1",
       "@sjfrhafe/nest-problem-details": "<rootDir>/src"
     }
-  },
-  "dependencies": {
-    "@nestjs/platform-fastify": "^10.3.7"
   }
 }
